2009-03-04  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: bugs_base and bugs_product may be null.
	commit_po takes a user argument so the commit can be attributed to the
	right person.
	* vertimus/models.py: New 'Submit to repository' action for modules which
	have write access.

2009-03-04  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: ActionDbBackup also needs the get_action method for
	rss feeds.

2009-03-04  Claude Paroz  <claude@2xlibre.net>

	* templates/feeds/actions_description.html:
	* vertimus/feeds.py: Strings improvement regarding the new feeds
	fonctionality.

2009-03-04  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	New RSS feeds to follow the Vertimus actions by team or
	language (#566504).

	* common/utils.py: Add a function to merge and sort two list of
	objects.
	* feeds/urls.py: Feed urls.
	* settings_sample.py: Add the feed application.
	* templates/feeds/actions_description.html: Feed item content.
	* templates/feeds/actions_title.html: Feed item title.
	* templates/languages/language_list.html: Add an RSS icon to each
	languages.	
	* templates/teams/team_detail.html: Associate the feed to the page.
	* media/img/feed-icon-10x10.png: Added feed icon.
	* urls.py: Add the '/rss' path.
	* vertimus/feeds.py: Generate the content of the Vertimus feeds.
	* vertimus/models.py: Add __unicode__ function to the archived actions.

2009-03-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* vertimus/models.py: Added translator comment.

2009-03-03  Claude Paroz  <claude@2xlibre.net>

	* languages/models.py:
	* languages/views.py:
	* stats/models.py: Now that URLs admit '@', slug/unslug locale is of no
	use.

2009-03-03  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/forms.py:
	* stats/models.py:
	* stats/utils.py:
	* teams/forms.py: Removed useless imports.

2009-03-01  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: More info for branch checkout error. Changed	git 
	update command.
