@@ -18,6 +18,7 @@
 # along with Damned Lies; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+from itertools import islice
 from django.core import urlresolvers
 from django.core.exceptions import ObjectDoesNotExist
 from django.contrib.syndication.feeds import Feed, FeedDoesNotExist
@@ -26,7 +27,7 @@ from django.contrib.sites.models import Site
 from languages.models import Language
 from teams.models import Team
 from vertimus.models import ActionDb, ActionDbBackup
-from common.utils import merge_sorted_by_field
+from common.utils import imerge_sorted_by_field
 
 class LatestActionsByLanguage(Feed):
     title_template = 'feeds/actions_title.html'
@@ -56,7 +57,8 @@ class LatestActionsByLanguage(Feed):
         actions_db = ActionDb.objects.filter(state_db__language=obj.id).select_related('state').order_by('-created')[:20]
         archived_actions_db = ActionDbBackup.objects.filter(state_db__language=obj.id).select_related('state').order_by('-created')[:20]
 
-        return (action_db.get_action() for action_db in merge_sorted_by_field(actions_db, archived_actions_db, '-created')[:20])
+        # islice avoid to fetch too many objects
+        return (action_db.get_action() for action_db in islice(imerge_sorted_by_field(actions_db, archived_actions_db, '-created'), 20))
 
     def item_link(self, item):
         return urlresolvers.reverse('vertimus-names-view', 
@@ -100,7 +102,12 @@ class LatestActionsByTeam(Feed):
         actions_db = ActionDb.objects.filter(state_db__language__team=obj.id).select_related('state').order_by('-created')[:20]
         archived_actions_db = ActionDbBackup.objects.filter(state_db__language__team=obj.id).select_related('state').order_by('-created')[:20]
 
-        return (action_db.get_action() for action_db in merge_sorted_by_field(actions_db, archived_actions_db, '-created')[:20])
+        import pdb; pdb.set_trace()
+
+        a = imerge_sorted_by_field(actions_db, archived_actions_db, '-created')
+        b = islice(imerge_sorted_by_field(actions_db, archived_actions_db, '-created'), 20)
+        # islice avoid to fetch too many objects
+        return (action_db.get_action() for action_db in islice(imerge_sorted_by_field(actions_db, archived_actions_db, '-created'), 20))
 
     def item_link(self, item):
         return urlresolvers.reverse('vertimus-names-view', 
